# DevRadar

./: Makefile  README.md
backend/: .gitignore  docker-compose.yml  knexfile.js  knexfile.ts  package-lock.json  package.json  schema.sql  tsconfig.build.json  tsconfig.json
backend-golang/: go.mod  go.sum  main.go  main_test.go
backend-golang/migrations/: 20260324182812_create_devs_table.sql  20260329052936_update_devs_spatial_index.sql
backend-rust/: Cargo.toml  mise.toml
backend-rust/migrations/: 20260324182812_create_devs_table.sql  20260329052936_update_devs_spatial_index.sql
backend-rust/src/: main.rs
backend-rust/tests/: spatial_logic_test.rs
backend/database/migrations/: 20250113185626_add_initial_schema.ts
backend/database/seeders/: 20250113185644_add_devs.ts
backend/migrations/: 20260324182812_create_devs_table.js  20260329052936_update_devs_spatial_index.js
backend/src/: index.js  index.ts  routes.js  routes.ts  websocket.js  websocket.ts
backend/src/config/: env.js  env.ts
backend/src/controllers/: DevController.js  SearchController.js  dev.controller.ts  search.controller.ts
backend/src/helpers/: data-manipulation.ts  distance.ts  github.ts  knex.ts  logger.ts  validation.ts
backend/src/utils/: getDevInformation.js
backend/tests/: spatial.test.js
load_tests/: k6_load_test.js
mobile/: .gitignore  README.md  app.json  package-lock.json  package.json
mobile/src/config/: runtimeConfig.js
mobile_flutter/: README.md  pubspec.yaml
mobile_flutter/linux/: CMakeLists.txt
mobile_flutter/test/: widget_test.dart
mobile_flutter/web/: index.html  manifest.json
mobile_flutter/windows/: CMakeLists.txt
web/: index.html  package-lock.json  package.json
web/src/: App.tsx
(+18 files in other folders)
