[package]
name = "devradar-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
headers = "0.4"
axum-extra = { version = "0.10", features = ["typed-header"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0.11"
dotenvy = "0.15.7"
async-stream = "0.3.6"

[eventsource-stream]
version = "0.3"
default-features = false
features = ["reqwest-client"]

[tokio-macros]
version = "2.2"
